export const snapshot = {};

snapshot[`input validator compiler 1`] = `
'function validate(value, context) {
  const { formatValidators } = context;
  const errors = [];
  if (!(typeof value === "object")) {
    errors.push([\`v\`, \`expected object, but got \${typeof value}\`]);
  } else if (!(value !== null)) {
    errors.push([\`v\`, "Expected non-null object, but got null"]);
  } else {
    if (!(typeof value["title"] === "string")) {
      errors.push([\`v.title\`, \`expected string, got \${typeof value["title"]}\`]);
    } else if (!(value["title"].length >= 10)) {
      errors.push([\`v.title\`,
        \`expected minimum length: 10, got \${value["title"].length}\`]);
    } else if (!(value["title"].length <= 200)) {
      errors.push([\`v.title\`,
        \`expected maximum length: 200, got \${value["title"].length}\`]);
    }
    if (!(typeof value["content"] === "string")) {
      errors.push([\`v.content\`,
        \`expected string, got \${typeof value["content"]}\`]);
    } else if (!(value["content"].length >= 100)) {
      errors.push([\`v.content\`,
        \`expected minimum length: 100, got \${value["content"].length}\`]);
    }
    if (!(typeof value["authorId"] === "string")) {
      errors.push([\`v.authorId\`,
        \`expected string, got \${typeof value["authorId"]}\`]);
    } else if (!(formatValidators["uuid"](value["authorId"]))) {
      errors.push([\`v.authorId\`,
        \`string format constraint "uuid" not satisfied\`]);
    }
    if (value["tags"] == null) {
    } else {
      if (!(Array.isArray(value["tags"]))) {
        errors.push([\`v.tags\`,
          \`expected array, but got \${typeof value["tags"]}\`]);
      } else if (!(value["tags"].length >= 2)) {
        errors.push([\`v.tags\`,
          \`expected minimum item count: 2, got \${value["tags"].length}\`]);
      } else {
        for (let _a0 = 0; _a0 < value["tags"].length; ++_a0) {
          if (!(typeof value["tags"][_a0] === "string")) {
            errors.push([\`v.tags[\${_a0}]\`,
              \`expected string, got \${typeof value["tags"][_a0]}\`]);
          } else if (!(value["tags"][_a0].length <= 10)) {
            errors.push([\`v.tags[\${_a0}]\`,
              \`expected maximum length: 10, got \${value["tags"][_a0].length}\`]);
          }
        }
      }
    }
  }
  return errors;
}
'
`;

snapshot[`input validator compiler 2`] = `
'Validation errors:
  - at v.title: expected minimum length: 10, got 6
  - at v.content: expected minimum length: 100, got 13
  - at v.authorId: string format constraint "uuid" not satisfied
  - at v.tags[2]: expected maximum length: 10, got 11'
`;

snapshot[`input validator compiler 3`] = `
'function validate(value, context) {
  const { formatValidators } = context;
  const errors = [];
  if (!(typeof value === "object")) {
    errors.push([\`v\`, \`expected object, but got \${typeof value}\`]);
  } else if (!(value !== null)) {
    errors.push([\`v\`, "Expected non-null object, but got null"]);
  } else {
    if (value["tag"] == null) {
    } else {
      let _a0 = [];
      if (!(typeof value["tag"] === "string")) {
        _a0.push([\`v.tag\`, \`expected string, got \${typeof value["tag"]}\`]);
      } else if (!(value["tag"].length <= 10)) {
        _a0.push([\`v.tag\`,
          \`expected maximum length: 10, got \${value["tag"].length}\`]);
      }
      if (_a0.length === 0) {
      } else {
        _a0 = [];
        if (!(Array.isArray(value["tag"]))) {
          _a0.push([\`v.tag\`, \`expected array, but got \${typeof value["tag"]}\`]);
        } else {
          for (let _a1 = 0; _a1 < value["tag"].length; ++_a1) {
            if (!(typeof value["tag"][_a1] === "string")) {
              _a0.push([\`v.tag[\${_a1}]\`,
                \`expected string, got \${typeof value["tag"][_a1]}\`]);
            } else if (!(value["tag"][_a1].length <= 10)) {
              _a0.push([\`v.tag[\${_a1}]\`,
                \`expected maximum length: 10, got \${
                  value["tag"][_a1].length
                }\`]);
            }
          }
        }
        if (!(_a0.length === 0)) {
          errors.push([\`v.tag\`,
            "The value matches none of the union variants"]);
        }
      }
    }
    if (value["authorId"] == null) {
    } else {
      if (!(typeof value["authorId"] === "string")) {
        errors.push([\`v.authorId\`,
          \`expected string, got \${typeof value["authorId"]}\`]);
      } else if (!(formatValidators["uuid"](value["authorId"]))) {
        errors.push([\`v.authorId\`,
          \`string format constraint "uuid" not satisfied\`]);
      }
    }
    if (value["search"] == null) {
    } else {
      const _a2 = [];
      if (!(typeof value["search"] === "object")) {
        _a2.push([\`v.search\`,
          \`expected object, but got \${typeof value["search"]}\`]);
      } else if (!(value["search"] !== null)) {
        _a2.push([\`v.search\`, "Expected non-null object, but got null"]);
      } else {
        const _a3 = [];
        if (!(typeof value["search"]["title"] === "string")) {
          _a3.push([\`v.search.title\`,
            \`expected string, got \${typeof value["search"]["title"]}\`]);
        } else if (!(value["search"]["title"].length >= 3)) {
          _a3.push([\`v.search.title\`,
            \`expected minimum length: 3, got \${
              value["search"]["title"].length
            }\`]);
        }
        const _a4 = [];
        if (!(typeof value["search"]["title"] === "string")) {
          _a4.push([\`v.search.title\`,
            \`expected string, got \${typeof value["search"]["title"]}\`]);
        } else if (!(value["search"]["title"].length <= 10)) {
          _a4.push([\`v.search.title\`,
            \`expected maximum length: 10, got \${
              value["search"]["title"].length
            }\`]);
        }
        const _a5 = [_a3, _a4];
        const _a6 = _a5.filter(errs => errs.length === 0).length;
        if (!(_a6 === 1)) {
          _a2.push([\`v.search\`, _a6 > 1
            ? \`The value satisfied more than one variants (\${_a6}) of the either\`
            : \`The value satisfied none of the either variants (\${
              _a5.map((errs, i) =>
                \`For variant #\${i}: \${
                  errs.map(([p, msg]) => msg).join("; ")
                }\`
              ).join(". ")
            })\`]);
        }
      }
      const _a7 = [];
      if (!(typeof value["search"] === "object")) {
        _a7.push([\`v.search\`,
          \`expected object, but got \${typeof value["search"]}\`]);
      } else if (!(value["search"] !== null)) {
        _a7.push([\`v.search\`, "Expected non-null object, but got null"]);
      } else {
        const _a8 = [];
        if (!(typeof value["search"]["content"] === "string")) {
          _a8.push([\`v.search.content\`,
            \`expected string, got \${typeof value["search"]["content"]}\`]);
        } else if (!(value["search"]["content"].length >= 3)) {
          _a8.push([\`v.search.content\`,
            \`expected minimum length: 3, got \${
              value["search"]["content"].length
            }\`]);
        }
        const _a9 = [];
        if (!(Array.isArray(value["search"]["content"]))) {
          _a9.push([\`v.search.content\`,
            \`expected array, but got \${typeof value["search"]["content"]}\`]);
        } else if (!(value["search"]["content"].length <= 3)) {
          _a9.push([\`v.search.content\`,
            \`expected maximum item count: 3, got \${
              value["search"]["content"].length
            }\`]);
        } else {
          for (let _a10 = 0; _a10 < value["search"]["content"].length; ++_a10) {
            if (!(typeof value["search"]["content"][_a10] === "string")) {
              _a9.push([\`v.search.content[\${_a10}]\`,
                \`expected string, got \${typeof value["search"]["content"][
                  _a10
                ]}\`]);
            } else if (!(value["search"]["content"][_a10].length >= 3)) {
              _a9.push([\`v.search.content[\${_a10}]\`,
                \`expected minimum length: 3, got \${
                  value["search"]["content"][_a10].length
                }\`]);
            }
          }
        }
        const _a11 = [_a8, _a9];
        const _a12 = _a11.filter(errs => errs.length === 0).length;
        if (!(_a12 === 1)) {
          _a7.push([\`v.search\`, _a12 > 1
            ? \`The value satisfied more than one variants (\${_a12}) of the either\`
            : \`The value satisfied none of the either variants (\${
              _a11.map((errs, i) =>
                \`For variant #\${i}: \${
                  errs.map(([p, msg]) => msg).join("; ")
                }\`
              ).join(". ")
            })\`]);
        }
      }
      const _a13 = [_a2, _a7];
      const _a14 = _a13.filter(errs => errs.length === 0).length;
      if (!(_a14 === 1)) {
        errors.push([\`v.search\`, _a14 > 1
          ? \`The value satisfied more than one variants (\${_a14}) of the either\`
          : \`The value satisfied none of the either variants (\${
            _a13.map((errs, i) =>
              \`For variant #\${i}: \${
                errs.map(([p, msg]) => msg).join("; ")
              }\`
            ).join(". ")
          })\`]);
      }
    }
  }
  return errors;
}
'
`;

snapshot[`input validator compiler 4`] = `
'Validation errors:
  - at v.authorId: string format constraint "uuid" not satisfied'
`;

snapshot[`input validator compiler 5`] = `
"Validation errors:
  - at v.tag: The value matches none of the union variants"
`;

snapshot[`input validator compiler 6`] = `
"Validation errors:
  - at v.search: The value satisfied none of the either variants (For variant #0: The value satisfied more than one variants (2) of the either. For variant #1: The value satisfied none of the either variants (For variant #0: expected string, got undefined. For variant #1: expected array, but got undefined))"
`;

snapshot[`input validator compiler 7`] = `
"Validation errors:
  - at v.search: The value satisfied none of the either variants (For variant #0: The value satisfied none of the either variants (For variant #0: expected string, got undefined. For variant #1: expected string, got undefined). For variant #1: The value satisfied none of the either variants (For variant #0: expected string, got object. For variant #1: expected maximum item count: 3, got 4))"
`;
